--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "file_path = r'C:\\Users\\User\\OneDrive\\Desktop\\tasks\\obesityall\\data\\ObesityDataSet.csv'\n",
+    "file_path = '.\data\ObesityDataSet.csv'",
     "df = pd.read_csv(file_path)\n",
     "df"
    ]
