--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "48f7cbc0",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "file_path = '.\data\ObesityDataSet.csv'",
+    "file_path = r'data\\ObesityDataSet.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "df"
    ]
